--- a/teste.html
+++ b/teste.html
@@ -8,6 +8,6 @@
 <body>
     <h1 id="detalhesCompra">Teste feito</h1>
 
-      <script src="/script/xx.js"></script>
+      <script src="/script/recebevalor.js"></script>
 </body>
 </html> 
